@@ -1,45 +1,63 @@
 package com.example.demo.service;
+
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.model.Employee;
 import com.example.demo.dto.EmployeeDTO;
 import com.example.demo.repository.EmployeeRepository;
+
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.mail.javamail.JavaMailSender;
+
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 @Service
 public class EmployeeService {
+
+    private final EmployeeRepository employeeRepository;
+
     @Autowired
-    private  EmployeeRepository employeeRepository;
-    // Get all employees
+    public EmployeeService(EmployeeRepository employeeRepository) {
+        this.employeeRepository = employeeRepository;
+    }
+
+    @Cacheable("employees")
     public List<EmployeeDTO> getAllEmployees() {
-        List<Employee> employees = employeeRepository.findAll();
-        return employees.stream()
+        return employeeRepository.findAll()
+                .stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Get employee by ID
     public Optional<EmployeeDTO> getEmployeeById(Long id) {
-        Optional<Employee> employeeOptional = employeeRepository.findById(id);
-        return employeeOptional.map(this::convertToDTO);
+        return employeeRepository.findById(id)
+                .map(employee -> Optional.ofNullable(convertToDTO(employee)))
+                .orElseThrow(() -> new ResourceNotFoundException("Employee not found with ID: " + id));
     }
 
-    // Save employee
+    @CacheEvict(value = "employees", allEntries = true)
+    @CachePut(value = "employees", key = "#result.id")
     public EmployeeDTO saveEmployee(EmployeeDTO employeeDTO) {
         Employee employee = convertToEntity(employeeDTO);
         Employee savedEmployee = employeeRepository.save(employee);
         return convertToDTO(savedEmployee);
     }
 
-    // Delete employee
     public void deleteEmployee(Long id) {
-        Optional<Employee> productOptional = employeeRepository.findById(id);
-        productOptional.ifPresent(employeeRepository::delete);
-        //employeeRepository.deleteById(id);
+        Employee employee = employeeRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Employee not found with ID: " + id));
+
+        employeeRepository.delete(employee);
     }
-    private EmployeeDTO convertToDTO(Employee employee) {
+
+    public EmployeeDTO convertToDTO(Employee employee) {
+        if (employee == null) {
+            return null;
+        }
         EmployeeDTO employeeDTO = new EmployeeDTO();
         employeeDTO.setId(employee.getId());
         employeeDTO.setName(employee.getName());
@@ -47,11 +65,12 @@ public class EmployeeService {
         return employeeDTO;
     }
 
-    private Employee convertToEntity(EmployeeDTO employeeDTO) {
+    public Employee convertToEntity(EmployeeDTO employeeDTO) {
         Employee employee = new Employee();
         employee.setId(employeeDTO.getId());
         employee.setName(employeeDTO.getName());
         employee.setDepartment(employeeDTO.getDepartment());
         return employee;
+
     }
-    }
+}
